# rs_tetris

./: Cargo.toml  README.md
console_test/: Cargo.toml
console_test/src/: main.rs
src/: field.rs  game.rs  lib.rs  macros.rs
src/mino/: absolute_cells.rs  cells.rs  form.rs  is_state.rs  macros.rs  mino.rs  mino_aggregation.rs  mino_base.rs  mino_core.rs  mod.rs  new_with.rs  plain_new.rs  position.rs  rotatable.rs  rotate.rs  rotation.rs  rotation_offset.rs  rotation_state.rs  srs.rs  srs_offset.rs  with_cells.rs
src/mino/marker_type/: form.rs  macros.rs  mino.rs  mod.rs  plain_new.rs  rotation_state.rs
src/mino/srs/: mod.rs  offset.rs
