[package]
name = "console_test"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetris = { path = "../" }

tokio = { version = "0.2", features = ["process", "sync", "macros", "time", "fs"] }
futures = "0.3.5"
log = "0.4.11"
pretty_env_logger = "0.4"
termion = "1.5.5"
ncurses = "5.99.0"
device_query = "0.2.5"
